# stencil

./: .gitignore  Cargo.toml  README.md  install.sh
sampleconfig/: i3.template  sampleconfig.toml
src/: main.rs
