[package]
authors = ["Liam Pribis <jackpribis@gmail.com>"]
edition = "2018"
name = "stencil"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
regex = "1.3"
serde = {version = "1.0", features = ["derive"]}
toml = "0.5"
